Fixed overlapping issue of the modal conatiner on smaller screen size!

--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -13,6 +13,7 @@
     transition: .1s opacity;
     opacity: 0;
     pointer-events: none;
+    z-index: 21 !important;
 
 }
 
